--- a/ErasmusWebiste/29.html
+++ b/ErasmusWebiste/29.html
@@ -54,11 +54,11 @@
                             <a href="contact.html">Contact Us</a>
                         </div>
                     </div>
-                    <div class="dropdown2">
-                        <button class="dropbtn2"style="position:absolute;height: 60px;width: 180px;top: 20px;left: 540px;">
+                    <div class="dropdown_projects">
+                        <button class="dropbtn_projects"style="position:absolute;height: 60px;width: 180px;top: 20px;left: 540px;">
                             Projects
                         </button>
-                        <div class="dropdown-content2"style="position:absolute;height: 350px;width: 180px;top: 80px;left: 540px;">
+                        <div class="dropdown-content_projects"style="position:absolute; height: 384px; width: 180px;top: 80px;left: 540px;">
                             <a href="24.html">2024/2025</a>
                             <a href="25.html">2025/2026</a>
                             <a href="26.html">2026/2027</a>
