--- a/ErasmusWebiste/login_page.html
+++ b/ErasmusWebiste/login_page.html
@@ -11,13 +11,13 @@
     <h1>Login</h1>
 
     <div class="signup-box">
-        <form>
-            <input type="text" placeholder="Username" style="position: absolute; left: 710px; top: 160px; width: 400px;" required>
-            <input type="password" placeholder="Password" style="position: absolute; left: 710px; top: 215px; width: 380px; height: 20px;" required>
-            <button type="submit" style="position: absolute; left: 710px; top: 330px; width: 100px; height: 60px;" >Log In</button>
-            <input type="checkbox" id="remember_creds" style="position: absolute; top: 297px;">
-            <label for="terms" style="position: absolute; top: 300px; left: 740px;">Remember my Credentials.</label>
-            <button style="margin-top: 15px;position: absolute; left: 820px; top: 320px; width: 150px; height: 40px;" ><a href="signup_page.html">Create an account</a></button>
+        <form style="position: relative;">
+            <input type="text" placeholder="Username" style="position: inherit; left: 5px; top: 10px; width: 400px; height: 30px; font-size: 23px; border-radius: 40px; border-style:double; border-color: rgb(180, 180, 180); border-width: 7px;" required>
+            <input type="password" placeholder="Password" style="position: inherit; left: 5px; top: 25px; width: 380px; height: 26px; font-size: 20px; border-radius: 30px; border-style:outset; border-color: rgb(180, 180, 180); border-width: 5px;" required>
+            <button type="submit" style="position: inherit; left: 10px; top: 80px; width: 140px; height: 50px; font-size: 25px; border-width: 5px;border-color: rgb(0, 219, 219);  border-style: outset ;" >Log In</button>
+            <input type="checkbox" id="remember_creds" style="position: inherit; left: -145px; top: 30px;">
+            <label for="terms" style="position: inherit; left: -150px; top: 30px; height: 25px; font-size: 20px;">Remember my Credentials.</label>
+            <button style="position: inherit; margin-top: 15px; left: 350px; top: 20px; width: 140px; height: 57px; font-size: 22px;  border-width: 5px;border-color: rgb(128, 128, 128);  border-style: outset"><a href="signup_page.html" style="color: rgb(219, 219, 219);">Create an account</a></button>
         </form>
     </div>
 
