--- a/ErasmusWebiste/index.html
+++ b/ErasmusWebiste/index.html
@@ -23,17 +23,16 @@
         <p style="position: absolute;top: 560px;left: 32%;width: 66.7%;font-size: 32px;">Diverse Course Selection: Explore a vast array of courses spanning programming languages, frameworks, and cutting-edge technologies. Our marketplace offers an extensive collection catering to all skill levels and interests.Learn from industry experts and seasoned professionals who bring their real-world experience into the virtual classroom. Our instructors are committed to providing engaging and effective learning experiences.</p>
         <img src="images/home_image2.jpg" alt="programming courses" style="position: absolute;left: 45px;top: 540px;width: 420px;height: 300px;">
 
-        <img style="background-color: rgb(92, 231, 150); position:fixed;left: 0px;top: 0px;width:100%;height:65px;">
-        <header>
-            <header>
+        <header style="background-color: rgb(100, 100, 100); position:fixed; left:0px; top:0px; width:100%; height:80px;">
+            <header style="position: relative">
                 <a href="index.html">
                     <img src="images/TestLogo.png" alt="logo" style="height: 100px; width: 100px; position: fixed; left: 2px; top: 2px;">
                 </a>
                 <div class="navbar">
-                    <a href="index.html" style="position:absolute;height: 30px;width: 100px;top: 20px;left: 102px;"><span>Home</span></a>
-                    <a href="news.html"style="position:absolute;height: 30px;width: 100px;top: 20px;left: 230px;"><span>News</span></a>                     
+                    <a href="index.html" style="position:absolute ;height: 30px;width: 100px;top: 20px;left: 102px;"><span>Home</span></a>
+                    <a href="news.html"style="position:absolute ;height: 30px;width: 100px;top: 20px;left: 230px;"><span>News</span></a>                     
                     <div class="dropdown">
-                        <button class="dropbtn"style="position:absolute;height: 60px;width: 180px;top: 20px;left: 360px;">
+                        <button class="dropbtn"style="position:absolute ;height: 60px;width: 180px;top: 20px;left: 360px;">
                             About Us
                         </button>
                         <div class="dropdown-content"style="position:absolute;height: 220px;width: 180px;top: 80px;left: 360px;">
@@ -43,7 +42,7 @@
                         </div>
                     </div>
                     <div class="dropdown_projects">
-                        <button class="dropbtn_projects"style="position:absolute;height: 60px;width: 180px;top: 20px;left: 540px;">
+                        <button class="dropbtn_projects"style="position:absolute ;height: 60px;width: 180px;top: 20px;left: 540px;">
                             Projects
                         </button>
                         <div class="dropdown-content_projects"style="position:absolute; height: 384px; width: 180px;top: 80px;left: 540px;">
@@ -57,7 +56,7 @@
                         </div>
                     </div>
                     <div class="dropdown">
-                        <a href="profile.html" style="border-radius: 80px;padding: 0px; position: absolute; top: 9px; left: 1850px; height: 60px; width: 60px; ">
+                        <a href="profile.html" style="border-radius: 80px;padding: 0px; position: absolute; top: 9px; left: 1840px; height: 60px; width: 60px; ">
                         <img src="images/EmptyPfp.png" alt="profile" style="height: 60px; width: 60px;">
                         </a>
                         <div class="dropdown-content"style="position:absolute;height: 280px;width: 180px;top: 70px;left: 1715px;">
@@ -68,7 +67,7 @@
                         </div>
                     </div>
                     <div class="search-bar">
-                        <input style="position: fixed; left: 1400px; width: 400px; top: 13px;border-radius: 100px;font-size: 20px;" type="text" id="searchInput" placeholder="Search for products...">
+                        <input style="position: fixed; left: 1400px; width: 400px; top: 13px;border-radius: 100px;border-width: 3px; border-color: rgb(151, 151, 151);   font-size: 20px;" type="text" id="searchInput" placeholder="Search for products...">
                         <a href="search.html" class="search-glass" style="border-radius: 14px; padding: 0px; position: fixed; top: 21px; left: 1780px; height: 30px; width: 30px;" onclick="search()">
                             <img src="images/magnifying-glass.webp" style="height: 29px;width: 29px;" alt="⌕">
                         </a>
