--- a/ErasmusWebiste/login_page.html
+++ b/ErasmusWebiste/login_page.html
@@ -12,12 +12,14 @@
 
     <div class="signup-box">
         <form style="position: relative;">
-            <input type="text" placeholder="Username" style="position: inherit; left: 5px; top: 10px; width: 400px; height: 30px; font-size: 23px; border-radius: 40px; border-style:double; border-color: rgb(180, 180, 180); border-width: 5px;" required>
-            <input type="password" placeholder="Password" style="position: inherit; left: 5px; top: 25px; width: 380px; height: 26px; font-size: 20px; border-radius: 30px; border-style:outset; border-color: rgb(180, 180, 180); border-width: 4px;" required>
-            <button type="submit" style="position: inherit; left: 10px; top: 230px; width: 140px; height: 50px; font-size: 25px; border-width: 5px;border-color: rgb(255, 71, 71);  border-style: outset;"><a style="position: relative; top: -3px;">Log In</a></button>
-            <input type="checkbox" id="remember_creds" style="position: inherit; left: -145px; top: 20px;">
-            <label for="remember_creds" style="position: inherit; left: -150px; top: 20px; height: 25px; font-size: 20px; user-select: none;">Remember my Credentials.</label>
+            <input type="text" placeholder="Username" style="position: inherit; left: 25px; top: 10px; width: 400px; height: 30px; font-size: 23px; border-radius: 40px; border-style: outset; border-color: rgb(180, 180, 180); border-width: 4px;" required>
+            <input type="password" placeholder="Password" style="position: inherit; left: 25px; top: 25px; width: 380px; height: 26px; font-size: 20px; border-radius: 30px; border-style:outset; border-color: rgb(180, 180, 180); border-width: 4px;" required>
+            <button type="submit" style="position: inherit; left: 30px; top: 230px; width: 140px; height: 50px; font-size: 25px; border-width: 5px;border-color: rgb(255, 71, 71);  border-style: outset;"><a style="position: relative; top: -3px;">Log In</a></button>
+            <input type="checkbox" id="remember_creds" style="position: inherit; left: -125px; top: 20px;">
+            <label for="remember_creds" style="position: inherit; left: -130px; top: 20px; height: 25px; font-size: 20px; user-select: none;">Remember my Credentials.</label>
             <button style="position: inherit; left: 350px; top: 175px; width: 143px; height: 58px; background-color: rgb(145, 145, 145);  font-size: 22px;  border-width: 5px;border-color: rgb(166, 166, 166);  border-style: outset"><a href="signup_page.html" style="position: relative; top: -1px;">Create an account</a></button>
+            <img style="background-color: rgb(31, 67, 121);position: relative; top: 12px; height: 40px; width: 200px;">
+            <img src="images/facebook-logo.png" style="height: 50px; width: 40px; position: relative; left: 100px; top: -30px;">
         </form>
     </div>
 
