--- a/ErasmusWebiste/index.html
+++ b/ErasmusWebiste/index.html
@@ -7,7 +7,7 @@
     <title>Erasmus Project Website</title>
 </head>
 <body>
-    
+    <footer>
         <img style="background-color:  rgb(100, 100, 100); position: absolute;top:1400px;width: 100%;height: 300px;left: 0%;">
         <img style="background-color: black; position: absolute;top: 1430px;width: 96%;height: 5px;left: 2%;">
         <a href="index.html"><p style="position: absolute;top: 1630px;left: 300px;font-size: x-large; color: black;">Frequently asked questions (FAQ)</p></a>  
@@ -15,27 +15,31 @@
         <p style="position: absolute;top: 1450px;left: 3.3%;width: 93%;">
             This is a test paragraph at the bottom of the page!
         </p>
+    </footer>
 
-        <h1 style="position: absolute;top: 110px;left: 5.3%;font-size: 32px;">Welcome to CodeTypeHub - Your Gateway to Infinite Possibilities in the World of Programming!</h1>
-        <p style="position: absolute;top: 200px;width: 66.7%;font-size: 32px;">Embark on a transformative learning experience with our expansive online programming course marketplace, where passion meets proficiency. Whether you're a budding coder, an aspiring tech entrepreneur, or a seasoned developer seeking to stay ahead of the curve, our marketplace is your one-stop destination for curated, high-quality programming courses.</p>
-        <img src="images/home_image1.webp" alt="programmer" style="position: absolute;left: 70%;top: 220px;width: 450px;height: 300px;">
-        <h2 style="position: absolute;top: 500px;left: 32%;font-size: 40px">Why CodeTypeHub?</h2>
-        <p style="position: absolute;top: 560px;left: 32%;width: 66.7%;font-size: 32px;">Diverse Course Selection: Explore a vast array of courses spanning programming languages, frameworks, and cutting-edge technologies. Our marketplace offers an extensive collection catering to all skill levels and interests.Learn from industry experts and seasoned professionals who bring their real-world experience into the virtual classroom. Our instructors are committed to providing engaging and effective learning experiences.</p>
-        <img src="images/home_image2.jpg" alt="programming courses" style="position: absolute;left: 45px;top: 540px;width: 420px;height: 300px;">
+        <div style="width: 600px;padding: 20px;background-color: #f0f0f0;border-radius: 15px;box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); box-sizing: border-box;">
+            <h1 style="position: absolute;top: 110px;left: 5.3%;font-size: 32px;">Welcome to CodeTypeHub - Your Gateway to Infinite Possibilities in the World of Programming!</h1>
+            <p style="position: absolute;top: 200px;width: 66.7%;font-size: 32px;">Embark on a transformative learning experience with our expansive online programming course marketplace, where passion meets proficiency. Whether you're a budding coder, an aspiring tech entrepreneur, or a seasoned developer seeking to stay ahead of the curve, our marketplace is your one-stop destination for curated, high-quality programming courses.</p>
+            <img src="images/home_image1.webp" alt="programmer" style="position: absolute;left: 70%;top: 220px;width: 450px;height: 300px;">
+            <h2 style="position: absolute;top: 500px;left: 32%;font-size: 40px">Why CodeTypeHub?</h2>
+            <p style="position: absolute;top: 560px;left: 32%;width: 66.7%;font-size: 32px;">Diverse Course Selection: Explore a vast array of courses spanning programming languages, frameworks, and cutting-edge technologies. Our marketplace offers an extensive collection catering to all skill levels and interests.Learn from industry experts and seasoned professionals who bring their real-world experience into the virtual classroom. Our instructors are committed to providing engaging and effective learning experiences.</p>
+            <img src="images/home_image2.jpg" alt="programming courses" style="position: absolute;left: 45px;top: 540px;width: 420px;height: 300px;">    
+        </div>
 
+        <img style="background-color: rgb(100, 100, 100); position:fixed; left: 0; top: 0; width: 100%; height: 83px;">
+        <div class="main-div">
         <header style="background-color: rgb(100, 100, 100); position:fixed; left:0px; top:0px; width:100%; height:80px;">
             <header style="position: relative">
                 <a href="index.html">
-                    <img src="images/TestLogo.png" alt="logo" style="height: 100px; width: 100px; position: fixed; left: 2px; top: 2px;">
                 </a>
                 <div class="navbar">
                     <a href="index.html" style="position:absolute ;height: 30px;width: 100px;top: 20px;left: 102px;"><span>Home</span></a>
                     <a href="news.html"style="position:absolute ;height: 30px;width: 100px;top: 20px;left: 230px;"><span>News</span></a>                     
                     <div class="dropdown">
-                        <button class="dropbtn"style="position:absolute ;height: 60px;width: 180px;top: 20px;left: 360px;">
+                        <button class="dropbtn"style="position:absolute; height:60px; width:180px; top:20px; left: 360px;">
                             About Us
                         </button>
-                        <div class="dropdown-content"style="position:absolute;height: 220px;width: 180px;top: 80px;left: 360px;">
+                        <div class="dropdown-content"style="position:absolute; height:220px; width:200px; top: 80px;left: 360px;">
                             <a href="abtUs.html">About Us</a>
                             <a href="faq.html">FAQ</a>
                             <a href="contact.html" style="height: 80px;">Contact Us</a>
@@ -56,7 +60,7 @@
                         </div>
                     </div>
                     <div class="dropdown">
-                        <a href="profile.html" style="border-radius: 80px;padding: 0px; position: absolute; top: 9px; left: 1840px; height: 60px; width: 60px; ">
+                        <a href="profile.html" style="position: absolute; border-radius: 80px;padding: 0px; position: absolute; top: 9px; left: 1840px; height: 60px; width: 60px; ">
                         <img src="images/EmptyPfp.png" alt="profile" style="height: 60px; width: 60px;">
                         </a>
                         <div class="dropdown-content"style="position:absolute;height: 280px;width: 180px;top: 70px;left: 1715px;">
@@ -67,16 +71,13 @@
                         </div>
                     </div>
                     <div class="search-bar">
-                        <input style="position: fixed; left: 1400px; width: 400px; top: 13px;border-radius: 100px;border-width: 3px; border-color: rgb(151, 151, 151);   font-size: 20px;" type="text" id="searchInput" placeholder="Search for products...">
-                        <a href="search.html" class="search-glass" style="border-radius: 14px; padding: 0px; position: fixed; top: 21px; left: 1780px; height: 30px; width: 30px;" onclick="search()">
+                        <input style="position: absolute; left: 1400px; width: 400px; top: 13px;border-radius: 100px;border-width: 3px; border-color: rgb(151, 151, 151);   font-size: 20px;" type="text" id="searchInput" placeholder="Search for products...">
+                        <a href="search.html" class="search-glass" style="border-radius: 14px; padding: 0px; position: absolute; top: 21px; left: 1780px; height: 30px; width: 30px;" onclick="search()">
                             <img src="images/magnifying-glass.webp" style="height: 29px;width: 29px;" alt="⌕">
                         </a>
                     </div>
                 </div>
-            </header> 
-            <div class="container">
-            </div>
-        
+            </header>         
             <script>
                 function search() {
                     const searchTerm = document.getElementById('searchInput').value;
@@ -85,5 +86,6 @@
                 }   
             </script>
         </header>
+        </div>
     </body>
 </html>
